# RTL-Terminal

./: .gitignore  LICENSE.txt  PROJECT_EXPLANATION.md  PROJECT_IMPORTANCE_REPORT.md  README.md  index.html  package-lock.json  package.json  rtl_terminal_prompt.md  vite.config.ts
.github/workflows/: build.yml  windows-build.yml
docs/: twitty-overview.html
public/: error-overlay.js
scripts/: capture-shots.mjs  normalize-config.cjs  probe-mount.mjs  test-shaping.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ansi.rs  bidi.rs  lib.rs  main.rs  pty.rs  terminal.rs
src/components/: StatusBar.tsx  TerminalCanvas.tsx  XtermTerminal.tsx  arabicReshaper.ts
src/hooks/: useTerminalSession.ts
src/lib/: mockTerminal.ts  types.ts
