[package]
name = "twitty"
version = "1.1.0"
description = "RTL-first bidirectional terminal emulator"
authors = ["RTL Terminal Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "rtl_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
unicode-bidi = "0.3"
unicode-width = "0.2"

[features]
default = []
